# supply-chain-agent

./: .env.example  .gitignore  README.md  part9_prompt_engineering.ipynb  prompt_engineering.py  pyproject.toml  requirements.txt  supply_chain_agent.py  supply_chain_workshop_facilitator_guide.docx  workshop_addendum_prompt_engineering.docx  workshop_notebook.ipynb
agent/: prompt_engineering.py  supply_chain_agent.py
config/: config.py
data/: orders.csv
notebooks/: prompt_evolution.md  workshop_notebook.ipynb  workshop_openai.ipynb
