[project]
name = "supply-chain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.0",
    "langchain-openai==0.2.0",
    "langchain-tavily>=0.1.5",
    "langsmith>=0.3.45",
    "pandas>=3.0.2",
    "python-dotenv==1.0.1",
    "tavily-python==0.5.0",
]
